[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-research-engine"
version = "0.1.0"
description = "Autonomous multi-agent research system using LangGraph supervisor-worker pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Midhuna Mohanraj", email = "midhunamohanraj@gmail.com" }
]
keywords = [
    "langgraph", "langchain", "multi-agent", "research",
    "ai", "llm", "autonomous-agents", "openai", "gpt4"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.0.0",
    "tavily-python>=0.3.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/MidhunaMohanraj/langgraph-research-engine"
Repository = "https://github.com/MidhunaMohanraj/langgraph-research-engine"
Issues = "https://github.com/MidhunaMohanraj/langgraph-research-engine/issues"

[project.scripts]
langgraph-research = "langgraph_research_engine:main"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_research_engine"]
